<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".PhoneVerActivity">

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:id="@+id/logo"
        android:contentDescription="@string/app_name">
    </ImageView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fitness_app_will_send_otp_to_your_entered_number"
        android:textSize="20sp"
        android:fontFamily="@font/raleway"
        android:textAlignment="center"
        android:textStyle="bold"
        android:padding="20dp"
        android:textColor="#6e6e6e"
        android:layout_below="@id/logo"
        android:id="@+id/text_heading">
    </TextView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:id="@+id/center_horizontal_line">
    </RelativeLayout>

    <com.hbb20.CountryCodePicker
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:ccp_areaCodeDetectedCountry="true"
        android:layout_centerInParent="true"
        android:layout_marginLeft="100dp"
        android:layout_marginRight="100dp"
        android:id="@+id/country_code_picker"
        app:ccp_autoDetectCountry="true"
        android:layout_marginBottom="10dp"
        android:layout_above="@id/center_horizontal_line">
    </com.hbb20.CountryCodePicker>

    <EditText
        android:id="@+id/phone_number_edit_text"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/center_horizontal_line"
        android:layout_marginLeft="70dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="70dp"
        android:autofillHints=""
        android:hint="@string/enter_your_number"
        android:inputType="number"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textColorHint="#757575"
        tools:ignore="TextFields" />

    <android.widget.Button
        android:id="@+id/send_otp_button"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_below="@id/phone_number_edit_text"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:background="#0F9D58"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:text="@string/send_otp"
        android:textColor="@color/white"
        android:textSize="15sp" />

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/send_otp_button"
        android:id="@+id/progress_bar_for_main"
        android:visibility="invisible"
        android:layout_marginTop="30dp">
    </ProgressBar>
</RelativeLayout>